# name-entity-recognition-service

./: README.md
src/: pyproject.toml
