[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["dtheod <danis.theodoulou.23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
numpy = "^1.23.4"
fastapi = "^0.87.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
